JumpScript/tests/baselines/reference/YieldExpression16_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression16_es6.jump(3,5): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression16_es6.jump (1 errors) ====
    function* foo() {
      function bar() {
        yield foo;
        ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
      }
    }